--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/jquery-3-4-1.js" ></script>
+  <script src="js/jquery-3.4.1.js" ></script>
   <script src="js/scripts.js" ></script>
   <title>Beep Boop</title>
 </head>
@@ -21,7 +21,7 @@
       <button type="submit" class="btn btn-info">Lets get boopy</button>
     </form>
     <div id="output">
-      
+
     </div>
   </div>
 </body>
