add new 1st spec, achieve 1st spec. Attempt second spec

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button type="submit" class="btn btn-info">Lets get boopy</button>
     </form>
     <div id="output">
-
+      <p>Output:</p>
     </div>
   </div>
 </body>
