delete console.logs, begin styling process

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Beep Boop!</h1>
+    <h1 class= "better">Beep Boop!</h1>
+    <!-- <h1 class="jumbotron" >Beep Boop!</h1> -->
     <p>Input a number into the form and enjoy the beauty of beeps and boops.</p>
     <form id="formy">
       <div class="form-group">
@@ -20,8 +21,12 @@
       </div>
       <button type="submit" class="btn btn-info">Lets get boopy</button>
     </form>
-    <div id="output">
+    <div class="well">
       <p>Output:</p>
+      
+      <div id="output">
+
+      </div>
     </div>
   </div>
 </body>
