change colors of text and layout of html elements

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 </head>
 <body>
   <div class="container">
-    <h1 class= "better">Beep Boop!</h1>
-    <!-- <h1 class="jumbotron" >Beep Boop!</h1> -->
-    <p>Input a number into the form and enjoy the beauty of beeps and boops.</p>
-    <form id="formy">
+    <div class="jumbotron">
+      <h1 class= "better">Beep Boop!</h1>
+      <p class="better">Input a number into the form and enjoy the beauty of beeps and boops.</p>
+
+    </div>
+    <form class="better" id="formy">
       <div class="form-group">
+        <label for="number">pick a favorite number bb</label> <br>
         <input type="text" id="userNumber">
       </div>
       <button type="submit" class="btn btn-info">Lets get boopy</button>
     </form>
+    <br><br>
     <div class="well">
-      <p>Output:</p>
+      <h3>Output:</h3>
       
       <div id="output">
 
