--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
   <title>Beep Boop</title>
 </head>
 <body>
+  <img src="img/code-block.webp" alt="snow" class="imgy">
   <div class="container">
     <div class="jumbotron">
       <h1 class= "better">Beep Boop!</h1>
       <p class="better">Input a number into the form and enjoy the beauty of beeps and boops.</p>
-
+      <h6>Also, hope you like the name is Davidson.</h6>
     </div>
     <form class="better" id="formy">
       <div class="form-group">
-        <label for="number">pick a favorite number bb</label> <br>
+        <label for="number">pick a favorite number</label> <br>
         <input type="text" id="userNumber">
       </div>
       <button type="submit" class="btn btn-info">Lets get boopy</button>
     </form>
-    <br><br>
+    <br><br><br> <br>
     <div class="well">
-      <h3>Output:</h3>
+      <!-- <h3>Output:</h3> -->
       
       <div id="output">
 
