add nice gifs floating left and right

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <title>Beep Boop</title>
 </head>
 <body>
-  <img src="img/code-block.webp" alt="snow" class="imgy">
+  <img src="img/stars.webp" alt="stars" class="imgy-L">
+  <img src="img/stars.webp" alt="stars" class="imgy-R">
   <div class="container">
     <div class="jumbotron">
       <h1 class= "better">Beep Boop!</h1>
