remove unnecassary comments, spacing, classes, styling, files

--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
   <img src="img/stars.webp" alt="stars" class="imgy-R">
   <div class="container">
     <div class="jumbotron">
-      <h1 class= "better">Beep Boop!</h1>
-      <p class="better">Input a number into the form and enjoy the beauty of beeps and boops.</p>
+      <h1>Beep Boop!</h1>
+      <p>Input a number into the form and enjoy the beauty of beeps and boops.</p>
       <h6>Also, hope you like the name is Davidson.</h6>
     </div>
-    <form class="better" id="formy">
+    <form id="formy">
       <div class="form-group">
         <label for="number">pick a favorite number</label> <br>
         <input type="text" id="userNumber">
       </div>
-      <button type="submit" class="btn btn-info">Lets get boopy</button>
+      <button type="submit" class="btn btn-info">Let's get boopy</button>
     </form>
-    <br><br><br> <br>
-    <div class="well">
-      <!-- <h3>Output:</h3> -->
-      
+    <br><br><br><br>
+    <div class="well">      
       <div id="output">
-
       </div>
     </div>
   </div>
