reestablished alignment styling to html form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>Input a number into the form and enjoy the beauty of beeps and boops.</p>
       <h6>Also, hope you like the name is Davidson.</h6>
     </div>
-    <form id="formy">
+    <form class="center" id="formy">
       <div class="form-group">
         <label for="number">pick a favorite number</label> <br>
         <input type="text" id="userNumber">
